--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -30,7 +30,14 @@
             </div>
         </li>
 
-        <li><a href="/kundeoverblik">Kunder</a></li>
+        <li class="dropdown">
+        <a href="/kundeoverblik">Kunder</a>
+        <div class="dropdown-content">
+            <a href="/kundeOverblik">Overblik over kunder</a>
+            <a href="/opretKunde">Opret kunde</a>
+            <a href="/updateKunde">Opdater kunde</a>
+        </div>
+        </li>
 
         <li class="dropdown">
             <a href="/tilstandsrapport">Rapporter</a>
