--- a/src/main/resources/templates/opretLejekontrakt.html
+++ b/src/main/resources/templates/opretLejekontrakt.html
@@ -31,7 +31,14 @@
             </div>
         </li>
 
-        <li><a th:href="@{/kundeoverblik}">Kunder</a></li>
+        <li class="dropdown">
+            <a href="/kundeoverblik">Kunder</a>
+            <div class="dropdown-content">
+                <a href="/kundeOverblik">Overblik over kunder</a>
+                <a href="/opretKunde">Opret kunde</a>
+                <a href="/updateKunde">Opdater kunde</a>
+            </div>
+        </li>
 
         <li class="dropdown">
             <a th:href="@{/tilstandsrapport}">Rapporter</a>
