--- a/src/main/resources/templates/opretTilstandsrapport.html
+++ b/src/main/resources/templates/opretTilstandsrapport.html
@@ -33,7 +33,14 @@
         </li>
 
 
-        <li><a href="/kundeoverblik">Kunder</a></li>
+        <li class="dropdown">
+            <a href="/kundeoverblik">Kunder</a>
+            <div class="dropdown-content">
+                <a href="/kundeOverblik">Overblik over kunder</a>
+                <a href="/opretKunde">Opret kunde</a>
+                <a href="/updateKunde">Opdater kunde</a>
+            </div>
+        </li>
 
 
         <li class="dropdown">
