--- a/src/main/resources/templates/opretTilstandsrapport.html
+++ b/src/main/resources/templates/opretTilstandsrapport.html
@@ -8,53 +8,49 @@
 <body>
 
 
-<!--- MENUBAR ---->
+<!-- MENUBAR -->
 <nav class="menubar">
     <ul>
-        <li><a href="/dashboard">Dashboard</a></li>
-
+        <li><a th:href="@{/dashboard}">Dashboard</a></li>
 
         <li class="dropdown">
-            <a href="/biloverblik">Biler</a>
+            <a th:href="@{/biloverblik}">Biler</a>
             <div class="dropdown-content">
-                <a href="/biloverblik">Overblik over biler</a>
-                <a href="/bil/opret">Opret ny bil</a>
+                <a th:href="@{/biloverblik}">Overblik over biler</a>
+                <a th:href="@{/bil/opret}">Opret ny bil</a>
+            </div>
+        </li>
+
+        <li class="dropdown">
+            <a th:href="@{/lejekontraktOverblik}">Lejekontrakter</a>
+            <div class="dropdown-content">
+                <a th:href="@{/lejekontraktOverblik}">Overblik lejekontrakter</a>
+                <a th:href="@{/opretLejekontrakt}">Opret lejekontrakt</a>
+                <a th:href="@{/updateLejekontrakt}">Opdater lejekontrakt</a>
+            </div>
+        </li>
+
+        <li class="dropdown">
+            <a th:href="@{/kundeoverblik}">Kunder</a>
+            <div class="dropdown-content">
+                <a th:href="@{/kundeOverblik}">Overblik over kunder</a>
+                <a th:href="@{/opretKunde}">Opret kunde</a>
+                <a th:href="@{/updateKunde}">Opdater kunde</a>
             </div>
         </li>
 
 
         <li class="dropdown">
-            <a href="/lejekontraktOverblik">Lejekontrakter</a>
+            <a th:href="@{/tilstandsrapport}">Rapporter</a>
             <div class="dropdown-content">
-                <a href="/lejekontraktOverblik">Overblik lejekontrakter</a>
-                <a href="/opretLejekontrakt">Opret lejekontrakt</a>
-                <a href="/updateLejekontrakt">Opdater lejekontrakt</a>
+                <a th:href="@{/tilstandsrapport}">Tilstandsrapporter</a>
+                <a th:href="@{/opretTilstandsrapport}">Opret tilstandsrapport</a>
+                <a th:href="@{/skaderapport}">Skaderapporter</a>
+                <a th:href="@{/opretskaderapport}">Opret skaderapport</a>
             </div>
         </li>
 
-
-        <li class="dropdown">
-            <a href="/kundeoverblik">Kunder</a>
-            <div class="dropdown-content">
-                <a href="/kundeOverblik">Overblik over kunder</a>
-                <a href="/opretKunde">Opret kunde</a>
-                <a href="/updateKunde">Opdater kunde</a>
-            </div>
-        </li>
-
-
-        <li class="dropdown">
-            <a href="/tilstandsrapport">Rapporter</a>
-            <div class="dropdown-content">
-                <a href="/tilstandsrapport">Tilstandsrapporter</a>
-                <a href="/opretTilstandsrapport">Opret tilstandsrapport</a>
-                <a href="/skaderapport">Skaderapporter</a>
-                <a href="/opretskaderapport">Opret skaderapport</a>
-            </div>
-        </li>
-
-
-        <li><a href="/logout">Log ud</a></li>
+        <li><a th:href="@{/logout}">Log ud</a></li>
     </ul>
 </nav>
 <!-- SLUT MENUBAR -->
