--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -31,11 +31,11 @@
         </li>
 
         <li class="dropdown">
-            <a th:href="@{/kundeoverblik}">Kunder</a>
+            <a th:href="@{/kundeOverblik}">Kunder</a>
             <div class="dropdown-content">
                 <a th:href="@{/kundeOverblik}">Overblik over kunder</a>
                 <a th:href="@{/opretKunde}">Opret kunde</a>
-                <a th:href="@{/updateKunde}">Opdater kunde</a>
+                <a th:href="@{/updateKxunde}">Opdater kunde</a>
             </div>
         </li>
 
