--- a/src/main/resources/templates/kundeOverblik.html
+++ b/src/main/resources/templates/kundeOverblik.html
@@ -32,7 +32,7 @@
         </li>
 
         <li class="dropdown">
-            <a th:href="@{/kundeoverblik}">Kunder</a>
+            <a th:href="@{/kundeOverblik}">Kunder</a>
             <div class="dropdown-content">
                 <a th:href="@{/kundeOverblik}">Overblik over kunder</a>
                 <a th:href="@{/opretKunde}">Opret kunde</a>
