--- a/src/main/resources/templates/opretLejekontrakt.html
+++ b/src/main/resources/templates/opretLejekontrakt.html
@@ -83,6 +83,9 @@
         <label for="pris">Pris</label>
         <input type="number" id="pris" th:field="*{pris}" step="0.01" required>
 
+        <label for="medarbejderId">MedarbejderId</label>
+        <input type="text" id="medarbejderId" th:field="*{medarbejderId}" required>
+
         <input type="submit" value="Opret">
     </form>
 
