--- a/src/main/resources/templates/updateLejekontrakt.html
+++ b/src/main/resources/templates/updateLejekontrakt.html
@@ -84,6 +84,9 @@
         <label>Pris</label>
         <input type="text" th:field="*{pris}"><br>
 
+        <label>Medarbejder ID</label>
+        <input type="text" th:field="*{medarbejderId}"><br>
+
         <button type="submit">Opdater</button>
 
     </form>
