--- a/src/main/resources/templates/forretningsudvikler.html
+++ b/src/main/resources/templates/forretningsudvikler.html
@@ -56,15 +56,15 @@
 
 <div class="container">
 
-    <!-- RETTET: Bruger nu ${biler} i stedet for ${udlejedeBiler} -->
+    <!-- Udlejede biler sektion -->
     <div class="boks udlejede-biler">
         <h2>Udlejede biler</h2>
         <ul>
-            <li th:each="bil : ${biler}" th:text="${bil.maerke + ' ' + bil.model}">Bilnavn</li>
+            <li th:each="bil : ${udlejedeBiler}" th:text="${bil.maerke + ' ' + bil.model}">Bilnavn</li>
         </ul>
     </div>
 
-    <!-- Denne var allerede korrekt -->
+    <!-- Ledige biler sektion -->
     <div class="boks ledige-biler">
         <h2>Biler klar til udlejning</h2>
         <ul>
@@ -72,7 +72,7 @@
         </ul>
     </div>
 
-    <!-- RETTET: Bruger nu ${samletIndtaegt} i stedet for ${indtjening} -->
+    <!-- Samlet indtægt boks -->
     <div class="boks samlet-indtaegt">
         <h2>Samlet indtægt</h2>
         <p th:text="${samletIndtaegt + ' kr.'}">0 kr.</p>
